--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1378,6 +1378,10 @@
   "api.common.WRONG_PHONE_FORMAT": "Неверный формат номера телефона",
   "api.contact.CONTACT_DUPLICATE_ERROR": "Контакт с таким номером телефона уже зарегистрирован в этом помещении",
   "api.acquiring.exportPaymentsToExcel.NOTHING_TO_EXPORT": "Не найдены платежи для экспорта",
+  "api.banking.importBankTransactions.INVALID_FILE_FORMAT": "Неверный формат файла. Ошибка: {message}",
+  "api.banking.importBankTransactions.SOMETHING_WENT_WRONG": "Что-то пошло не так. Попробуйте снова или обратитесь тех-поддержку",
+  "api.banking.importBankTransactions.ANOTHER_INTEGRATION_IS_USED": "К данному счёту подключена другая интеграция, которая получает транзакции другим способом. В данном случае нельзя использовать получение транзакций из файла",
+  "api.banking.importBankTransactions.BANK_ACCOUNT_HAS_NO_INTEGRATION": "Для данной операции импорта был найден расчётный счёт с id=\"{id}\", у которого нет интеграциии. Это значит что данный счёт мог использоваться как-то по-другому. В данном случае он не может использоваться для получения данных из файла",
   "api.user.PASSWORD_IS_TOO_SHORT": "Длина введённого пароля меньше {min} символов",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "Пароль слишком простой. Нужно использовать что-то более безопасное",
   "api.user.TOO_MANY_REQUESTS": "Подождите {secondsRemaining} сек., чтобы отправить запрос снова",
