--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1374,6 +1374,8 @@
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "No property scopes found for export",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_PASSWORD": "Wrong password",
   "api.user.authenticateUserWithPhoneAndPassword.USER_NOT_FOUND": "User not found by specified phone number",
+  "api.user.authenticateUserThroughExternalIdentity.USER_NOT_FOUND": "User not found by specified external identity",
+  "api.user.registerNewUserThroughExternalIdentity.EXTERNAL_IDENTITY_ALREADY_REGISTERED_ERROR": "User already registered by specified external identity",
   "api.user.changePhoneNumberResidentUser.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Could not find token to change phone or it was expired. Try to start phone changing procedure from scratch.",
   "api.user.checkPasswordRecoveryToken.TOKEN_NOT_FOUND": "Could not find token to recover password or it was expired. Try to start password recovery procedure from scratch.",
   "api.user.startPasswordRecovery.USER_NOT_FOUND": "Could not find user to recover access for",
