feat(condo): DOMA-2567 added incident log item in sidebar. Updated sidebar icons

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -172,6 +172,7 @@
   "global.section.analytics": "Analytics",
   "global.section.onBoarding": "Where to begin?",
   "global.section.controlRoom": "Control Room",
+  "global.section.incidents": "Incidents log",
   "global.section.properties": "Buildings",
   "global.section.tickets": "Tickets",
   "global.section.employees": "Employees",
