--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -172,6 +172,7 @@
   "global.section.analytics": "Аналитика",
   "global.section.onBoarding": "С чего начать?",
   "global.section.controlRoom": "Диспетчерская",
+  "global.section.incidents": "Журнал отключений",
   "global.section.properties": "Дома",
   "global.section.tickets": "Заявки",
   "global.section.employees": "Сотрудники",
