feat(condo): DOMA-5131 VoIP push support, tests & script added
feat(condo): DOMA-5131 fixes after review

feat(condo): DOMA-5131 rebased & fixed migration

feat(condo): DOMA-5131 selfreview

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1083,6 +1083,7 @@
   "notification.messages.CUSTOM_CONTENT_MESSAGE_SMS.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "Новая заявка на открытие счета в Сбере",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
+  "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
   "TicketDeadline": "Срок выполнения заявки",
   "TicketDeferredDeadline": "Срок отложенности заявки",
   "ticket.EmptyList.header": "Список заявок пока пуст",
