--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1083,6 +1083,7 @@
   "notification.messages.CUSTOM_CONTENT_MESSAGE_SMS.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "New request for Sber account creation",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Bank account creation",
+  "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
   "TicketDeadline": "Ticket deadline",
   "TicketDeferredDeadline": "Ticket deferred deadline",
   "ticket.EmptyList.header": "The list of applications is still empty",
