feat(condo): DOMA-2567 added translates for incidents. Some fixes

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -184,6 +184,8 @@
   "global.notAvailable": "Отсутствует",
   "global.select.deletedEmployee": "Удаленный сотрудник",
   "global.select.deletedOption": "Удалено",
+  "global.filters.dateRange.start": "Начальная дата",
+  "global.filters.dateRange.end": "Конечная дата",
   "miniapps.catalog.banner.more": "Подробнее",
   "miniapps.catalog.noServicesInCategory": "Сервисов в этой категории пока нет",
   "miniapps.catalog.noServicesFound": "Такого сервиса нет",
@@ -1638,5 +1640,85 @@
   "banking.costItem.ELECTRIC_ENERGY.name": "Электрическая энергия",
   "banking.costItem.LEGAL_SERVICES.name": "Юридический услуги",
   "banking.costItem.DEBT_COLLECTION.name": "Взыскание задолженности",
-  "banking.costItem.DRAINAGE.name": "Водоотведение"
+  "banking.costItem.DRAINAGE.name": "Водоотведение",
+  "incident.index.title": "Журнал отключений",
+  "incident.index.emptyList.label": "Пока в журнале нет записей",
+  "incident.index.createIncident.label": "Добавить",
+  "incident.index.filter.searchByAddress.placeholder": "Поиск по адресу",
+  "incident.index.filter.attributes.actual.label": "Актуальные",
+  "incident.index.filter.attributes.notActual.label": "Неактуальные",
+  "incident.index.filter.number.placeholder": "Номер инцидента",
+  "incident.index.filter.details.placeholder": "Описание",
+  "incident.index.filter.status.placeholder": "Статус",
+  "incident.index.addNewIncident.label": "Добавить запись",
+  "incident.index.tableColumns.number.label": "№",
+  "incident.index.tableColumns.properties.label": "Адреса",
+  "incident.index.tableColumns.classifiers.label": "Классификатор",
+  "incident.index.tableColumns.details.label": "Описание",
+  "incident.index.tableColumns.status.label": "Статус",
+  "incident.index.tableColumns.workStart.label": "Начало работ",
+  "incident.index.tableColumns.workFinish.label": "Завершение работ",
+  "incident.id.title": "Отключение №",
+  "incident.id.error.title": "Отключение",
+  "incident.id.createdAt": "Дата создания",
+  "incident.id.author": "Автор",
+  "incident.id.edit.label": "Редактировать",
+  "incident.id.makeActual.label": "Сделать актуальным",
+  "incident.id.makeNotActual.label": "Больше не актуально",
+  "incident.id.changeHistory.title": "История изменений",
+  "incident.status.actual": "Актуально",
+  "incident.status.notActual": "Неактуально",
+  "incident.workType.emergency": "Аварийные",
+  "incident.workType.scheduled": "Плановые",
+  "incident.create.title": "Новая запись",
+  "incident.update.title": "Редактировать запись",
+  "incident.form.save.label": "Сохранить",
+  "incident.form.alert.notActualWorkFinish.title": "Дата завершения работ неактуальна",
+  "incident.form.alert.notActualWorkFinish.description": "Срок выполнения работ по этому отключению истек. Обновите дату или уберите, если она неизвестна.",
+  "incident.fields.classifier.label": "Классификатор",
+  "incident.fields.classifier.empty": "—",
+  "incident.fields.placeClassifier.label": "Место",
+  "incident.fields.categoryClassifier.label": "Катеогия",
+  "incident.fields.problemClassifier.label": "Проблема",
+  "incident.fields.placeClassifier.placeholder": "Выберите место",
+  "incident.fields.categoryClassifier.placeholder": "Выберите катеорию",
+  "incident.fields.properties.label": "Адреса",
+  "incident.fields.properties.checkAll.label": "Выбрать все",
+  "incident.fields.properties.allSelected": "Все дома",
+  "incident.fields.workDate.label": "Начало работ",
+  "incident.fields.workDate.from": "С",
+  "incident.fields.workDate.to": "До",
+  "incident.fields.workDate.overdue": "Просрочено",
+  "incident.fields.workDate.timeLeft": "Осталось",
+  "incident.fields.workStart.label": "Начало работ",
+  "incident.fields.workFinish.label": "Завершение работ",
+  "incident.fields.workType.label": "Тип работ",
+  "incident.fields.workType.empty": "—",
+  "incident.fields.details.label": "Что случилось",
+  "incident.fields.details.placeholder": "Опишите подробности",
+  "incident.fields.details.error.length": "Пожалуйста, опишите проблему подробнее",
+  "incident.fields.textForResident.label": "Что сказать жителю",
+  "incident.fields.textForResident.placeholder": "Напишите, что скажет жителю сотрудник",
+  "incident.fields.textForResident.empty": "—",
+  "incident.modalChangeStatus.save": "Все верно",
+  "incident.modalChangeStatus.toActualStatus.title": "Запись актуальна?",
+  "incident.modalChangeStatus.toActualStatus.beforeWorkFinish.descriptions": "Если работы выполнены до указанного срока, мы изменим статус записи. А также дату и время завершения работ. Запись можно отредактировать позже.?",
+  "incident.modalChangeStatus.toActualStatus.afterWorkFinish.descriptions": "Работы выполнены позже указанного срока. Мы изменим статус записи, а также дату и время завершения работ. Запись можно отредактировать в любое время.",
+  "incident.modalChangeStatus.toNotActualStatus.title": "Запись больше не актуальна?",
+  "incident.modalChangeStatus.toNotActualStatus.descriptions": "Если вы хотите изменить статус отключения, не забудьте исправить дату завершения работ на актуальную.",
+  "incident.changeHistory.booleanChange": "изменил {field}. Стало {to}",
+  "incident.changeHistory.change": "изменил {field} на {to}. Было {from}",
+  "incident.changeHistory.add": "добавил {field}. Стало {to}",
+  "incident.changeHistory.remove": "удалил {field}. Было {from}",
+  "incident.changeHistory.details": "значение поля «Что случилось»",
+  "incident.changeHistory.textForResident": "значение поля «Что сказать жителю»",
+  "incident.changeHistory.status": "статус записи",
+  "incident.changeHistory.workStart": "дату начала работа",
+  "incident.changeHistory.workFinish": "дату завершения работ",
+  "incident.changeHistory.workType": "тип работ",
+  "incident.changeHistory.workType.emergency": "«аварийные»",
+  "incident.changeHistory.workType.notEmergency": "«не аварийные»",
+  "incident.changeHistory.workType.scheduled": "«плановые»",
+  "incident.changeHistory.workType.notScheduled": "«не плановые",
+  "incident.hints.more.label": "Подробнее"
 }
