feat(condo): DOMA-2567 added incidents export

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1536,12 +1536,27 @@
   "excelExport.headers.propertyScopes.name": "Property scope name",
   "excelExport.headers.propertyScopes.properties": "Properties",
   "excelExport.headers.propertyScopes.employees": "Employees",
+  "excelExport.headers.incidents.title": "Incidents export",
+  "excelExport.headers.incidents.number": "Number",
+  "excelExport.headers.incidents.addresses": "Addresses",
+  "excelExport.headers.incidents.classifiers": "Classifiers",
+  "excelExport.headers.incidents.details": "Details",
+  "excelExport.headers.incidents.status": "Status",
+  "excelExport.headers.incidents.workStart": "Work start",
+  "excelExport.headers.incidents.workFinish": "Work finish",
+  "excelExport.headers.incidents.textForResident": "What to say to a resident",
+  "excelExport.headers.incidents.organization": "Organization",
+  "excelExport.headers.incidents.createdBy": "Author",
+  "excelExport.headers.incidents.createdAt": "Date of creation",
+  "excelExport.headers.incidents.isScheduled": "Type: scheduled",
+  "excelExport.headers.incidents.isEmergency": "Type: emergency",
   "excelExport.tickets.ticketCommentFilesCount": "files",
   "excelExport.tickets.ticketFromResident": "resident",
   "excelExport.tickets.ticketFromNonResident": "not resident",
   "excelExport.sheetNames.buildings": "Properties",
   "excelExport.sheetNames.tickets": "Tickets",
   "excelExport.sheetNames.propertyScopes": "Property scopes",
+  "excelExport.sheetNames.incidents": "Incidents",
   "ticketBlankExport.address.unitType.flat": "flat",
   "ticketBlankExport.address.unitType.parking": "parking place",
   "ticketBlankExport.address.unitType.apartment": "apartment",
@@ -1720,5 +1735,6 @@
   "incident.changeHistory.workType.notEmergency": "\"«not emergency\"",
   "incident.changeHistory.workType.scheduled": "\"scheduled\"",
   "incident.changeHistory.workType.notScheduled": "\"not scheduled\"",
-  "incident.hints.more.label": "More"
+  "incident.hints.more.label": "Подробнее",
+  "incident.task.exportToExcel": "Export"
 }
