--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1536,12 +1536,27 @@
   "excelExport.headers.propertyScopes.name": "Название области видимости",
   "excelExport.headers.propertyScopes.properties": "Дома",
   "excelExport.headers.propertyScopes.employees": "Сотрудники",
+  "excelExport.headers.incidents.title": "Выгрузка отключений",
+  "excelExport.headers.incidents.number": "Номер отключения",
+  "excelExport.headers.incidents.addresses": "Адреса",
+  "excelExport.headers.incidents.classifiers": "Классификаторы",
+  "excelExport.headers.incidents.details": "Описание",
+  "excelExport.headers.incidents.status": "Статус",
+  "excelExport.headers.incidents.workStart": "Начало работ",
+  "excelExport.headers.incidents.workFinish": "Конец работ",
+  "excelExport.headers.incidents.textForResident": "Что сказать жителю",
+  "excelExport.headers.incidents.organization": "Организация",
+  "excelExport.headers.incidents.createdBy": "Автор",
+  "excelExport.headers.incidents.createdAt": "Дата создания",
+  "excelExport.headers.incidents.isScheduled": "Тип: аварийное",
+  "excelExport.headers.incidents.isEmergency": "Тип: плановое",
   "excelExport.tickets.ticketCommentFilesCount": "файлов",
   "excelExport.tickets.ticketFromResident": "житель",
   "excelExport.tickets.ticketFromNonResident": "не житель",
   "excelExport.sheetNames.buildings": "Список домов",
   "excelExport.sheetNames.tickets": "Заявки",
   "excelExport.sheetNames.propertyScopes": "Области видимости",
+  "excelExport.sheetNames.incidents": "Отключения",
   "ticketBlankExport.address.unitType.flat": "квартира",
   "ticketBlankExport.address.unitType.parking": "машиноместо",
   "ticketBlankExport.address.unitType.apartment": "апартаменты",
@@ -1720,5 +1735,6 @@
   "incident.changeHistory.workType.notEmergency": "«не аварийные»",
   "incident.changeHistory.workType.scheduled": "«плановые»",
   "incident.changeHistory.workType.notScheduled": "«не плановые»",
-  "incident.hints.more.label": "Подробнее"
+  "incident.hints.more.label": "Подробнее",
+  "incident.task.exportToExcel": "Экспорт"
 }
