feat(callcenter): DOMA-2567 added incidents page

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1665,8 +1665,10 @@
   "incident.index.filter.number.placeholder": "Incident number",
   "incident.index.filter.details.placeholder": "Details",
   "incident.index.filter.status.placeholder": "Status",
+  "incident.index.filter.organization.placeholder": "Organization",
   "incident.index.addNewIncident.label": "Add a note",
   "incident.index.tableColumns.number.label": "№",
+  "incident.index.tableColumns.organization.label": "Organization",
   "incident.index.tableColumns.properties.label": "Addresses",
   "incident.index.tableColumns.classifiers.label": "Classifier",
   "incident.index.tableColumns.details.label": "Details",
