--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1665,8 +1665,10 @@
   "incident.index.filter.number.placeholder": "Номер инцидента",
   "incident.index.filter.details.placeholder": "Описание",
   "incident.index.filter.status.placeholder": "Статус",
+  "incident.index.filter.organization.placeholder": "Организация",
   "incident.index.addNewIncident.label": "Добавить запись",
   "incident.index.tableColumns.number.label": "№",
+  "incident.index.tableColumns.organization.label": "Организация",
   "incident.index.tableColumns.properties.label": "Адреса",
   "incident.index.tableColumns.classifiers.label": "Классификатор",
   "incident.index.tableColumns.details.label": "Описание",
