feat(condo): DOMA-5237 cookie agreement
Responsive floating panel, located in bottom of page

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -254,6 +254,10 @@
   "ContactSupportToCancelIntegration": "To cancel integration contact support of «{company}».",
   "ClickToSeeMore": "Click to see more information",
   "ClearAllFilters": "Clear all filters",
+  "component.CookieAgreement.title": "We use Cookie.",
+  "component.CookieAgreement.description": "Website doma.ai has Сookie for proper working, they provide analytics and safe for Your computer. To know more on Cookie, please read user agreement and Cookie policy. If you need to disable them, you can do it in browser settings",
+  "component.CookieAgreement.action.accept": "Accept",
+  "component.CookieAgreement.action.expand": "Read more",
   "component.uploadlist.AttachedFilesLabel": "Files list",
   "component.uploadlist.AddFileLabel": "Add file",
   "component.uploadlist.error.FileTooBig": "File size is too big, max size is {maxSizeInMb} MB",
