--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -254,6 +254,10 @@
   "ContactSupportToCancelIntegration": "Чтобы отключить интеграцию свяжитесь с тех. поддержкой «{company}».",
   "ClickToSeeMore": "Нажмите, чтобы посмотреть подробнее",
   "ClearAllFilters": "Сбросить все фильтры",
+  "component.CookieAgreement.title": "Мы используем файлы Cookie.",
+  "component.CookieAgreement.description": "На сайте doma.ai есть Cookie. Они помогают ему работать, обеспечивают нас аналитикой и безопасны для вашего компьютера. Чтобы узнать больше о Cookie, прочитайте условия и принципы их обработки. Если надо отключить файлы — зайдите в настройки браузера",
+  "component.CookieAgreement.action.accept": "Принять",
+  "component.CookieAgreement.action.expand": "Подробнее",
   "component.uploadlist.AttachedFilesLabel": "Прикреплённые файлы",
   "component.uploadlist.AddFileLabel": "Добавить файл",
   "component.uploadlist.error.FileTooBig": "Файл слишком большой, максимальный размер - {maxSizeInMb} МБ",
