fix(callcenter): DOMA-5240 fixed placeholder for organization select on ticket hint page

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -571,6 +571,7 @@
   "pages.condo.ticket.filters.EnterPhone": "Enter phone",
   "pages.condo.ticket.filters.EnterFullName": "Enter full name",
   "pages.condo.ticket.filters.EnterOrganization": "Enter full name",
+  "pages.condo.ticket.filters.SelectOrganization": "Choose an organization",
   "pages.condo.ticket.filters.Organization": "Organization",
   "pages.condo.ticket.filters.isResidentContact": "Resident/Not resident",
   "pages.condo.ticket.filters.isResidentContact.true": "resident",
