--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -571,6 +571,7 @@
   "pages.condo.ticket.filters.EnterPhone": "Введите телефон",
   "pages.condo.ticket.filters.EnterFullName": "Введите ФИО",
   "pages.condo.ticket.filters.EnterOrganization": "Введите организацию",
+  "pages.condo.ticket.filters.SelectOrganization": "Выберите организацию",
   "pages.condo.ticket.filters.Organization": "Организация",
   "pages.condo.ticket.filters.isResidentContact": "Житель/не житель",
   "pages.condo.ticket.filters.isResidentContact.true": "Житель",
