--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -679,7 +679,7 @@
   "pages.condo.ticket.TicketChanges.autoReopenTicket.resetAssignee": "Was reset automatically assignee ({assignee})",
   "pages.condo.ticket.TicketChanges.autoReopenTicket.resetExecutor": "Was reset automatically executor ({executor})",
   "pages.condo.ticket.TicketChanges.autoReopenTicket.status": "Ticket status changed to {status}",
-  "pages.condo.ticket.TicketChanges.declineTicketByResident.status": "Canceled the ticket through Mobile Application Resident",
+  "pages.condo.ticket.TicketChanges.declineTicketByResident.status": "canceled the ticket through Mobile Application Resident",
   "pages.condo.ticket.TicketChanges.fetchMore": "Show more {count}",
   "pages.condo.ticket.MobileAppInstalled": "Mob. resident app installed",
   "pages.condo.ticket.MobileAppNotInstalled": "Mob. resident app not installed",
