fix(condo): DOMA-2567 changed label export button for incidents

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1742,6 +1742,5 @@
   "incident.changeHistory.workType.notEmergency": "\"«not emergency\"",
   "incident.changeHistory.workType.scheduled": "\"scheduled\"",
   "incident.changeHistory.workType.notScheduled": "\"not scheduled\"",
-  "incident.hints.more.label": "Подробнее",
-  "incident.task.exportToExcel": "Export"
+  "incident.hints.more.label": "Подробнее"
 }
