fix(condo): DOMA-2606 fixed translations

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -639,8 +639,8 @@
   "pages.condo.ticket.title.TicketChanges": "История изменений заявки",
   "pages.condo.ticket.title.TicketFromResident": "Заявка от жителя",
   "pages.condo.ticket.title.TicketNotFromResident": "Заявка не от жителя",
-  "pages.condo.ticket.alert.BlockedEditing.title": "Редактирование заявки не доступно",
-  "pages.condo.ticket.alert.BlockedEditing.description": "Вы не можете изменить заявку потому, что указанный адрес больше не обслуживается",
+  "pages.condo.ticket.alert.BlockedEditing.title": "Редактирование заявки недоступно",
+  "pages.condo.ticket.alert.BlockedEditing.description": "Вы не можете изменить заявку, потому что указанный адрес больше не обслуживается",
   "pages.condo.ticket.TicketChanges.add": "добавил {field}. Стало {to}",
   "pages.condo.ticket.TicketChanges.change": "изменил {field} на {to}. Был {from}",
   "pages.condo.ticket.TicketChanges.boolean.change": "изменил {field}. Стала {to}",
