fix(condo): DOMA-2567 fixes after testing: - Changed Incident model (isScheduled and isEmergency to workType). - Fixed IncidentChange. Fixed IncidentChange test. - Fixed id for incident analytics. - Fixed translations. - Fixed placeholders in incident creating page. - Refactored imports. - Fixed icon for incident create button. - Fixed incidents export. - Fixed incident status update in modal. - Fixed incident change history view. - Fixed "textForResident" field updating for incident. - Fixed incident hints wrapper. - Fixed incident hints search. - Fixed incident table render. - Fixed incident hints content size. - Fixed incident validation. - Fixed hints layout. - Updated submodule callcenter

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1544,12 +1544,11 @@
   "excelExport.headers.incidents.status": "Статус",
   "excelExport.headers.incidents.workStart": "Начало работ",
   "excelExport.headers.incidents.workFinish": "Конец работ",
+  "excelExport.headers.incidents.workType": "Тип работ",
   "excelExport.headers.incidents.textForResident": "Что сказать жителю",
   "excelExport.headers.incidents.organization": "Организация",
   "excelExport.headers.incidents.createdBy": "Автор",
   "excelExport.headers.incidents.createdAt": "Дата создания",
-  "excelExport.headers.incidents.isScheduled": "Тип: аварийное",
-  "excelExport.headers.incidents.isEmergency": "Тип: плановое",
   "excelExport.tickets.ticketCommentFilesCount": "файлов",
   "excelExport.tickets.ticketFromResident": "житель",
   "excelExport.tickets.ticketFromNonResident": "не житель",
@@ -1685,8 +1684,8 @@
   "incident.id.changeHistory.title": "История изменений",
   "incident.status.actual": "Актуально",
   "incident.status.notActual": "Неактуально",
-  "incident.workType.emergency": "Аварийные",
-  "incident.workType.scheduled": "Плановые",
+  "incident.workType.emergency": "Аварийный",
+  "incident.workType.scheduled": "Плановый",
   "incident.create.title": "Новая запись",
   "incident.update.title": "Редактировать запись",
   "incident.form.save.label": "Сохранить",
@@ -1700,7 +1699,7 @@
   "incident.fields.categoryClassifier.label": "Категория",
   "incident.fields.problemClassifier.label": "Проблема",
   "incident.fields.placeClassifier.placeholder": "Выберите место",
-  "incident.fields.categoryClassifier.placeholder": "Выберите катеорию",
+  "incident.fields.categoryClassifier.placeholder": "Выберите категорию",
   "incident.fields.properties.label": "Адреса",
   "incident.fields.properties.checkAll.label": "Выбрать все",
   "incident.fields.properties.allSelected": "Все дома",
@@ -1735,12 +1734,8 @@
   "incident.changeHistory.details": "значение поля «Что случилось»",
   "incident.changeHistory.textForResident": "значение поля «Что сказать жителю»",
   "incident.changeHistory.status": "статус записи",
-  "incident.changeHistory.workStart": "дату начала работа",
+  "incident.changeHistory.workStart": "дату начала работ",
   "incident.changeHistory.workFinish": "дату завершения работ",
   "incident.changeHistory.workType": "тип работ",
-  "incident.changeHistory.workType.emergency": "«аварийные»",
-  "incident.changeHistory.workType.notEmergency": "«не аварийные»",
-  "incident.changeHistory.workType.scheduled": "«плановые»",
-  "incident.changeHistory.workType.notScheduled": "«не плановые»",
   "incident.hints.more.label": "Подробнее"
 }
