--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1544,12 +1544,11 @@
   "excelExport.headers.incidents.status": "Status",
   "excelExport.headers.incidents.workStart": "Work start",
   "excelExport.headers.incidents.workFinish": "Work finish",
+  "excelExport.headers.incidents.workType": "Work type",
   "excelExport.headers.incidents.textForResident": "What to say to a resident",
   "excelExport.headers.incidents.organization": "Organization",
   "excelExport.headers.incidents.createdBy": "Author",
   "excelExport.headers.incidents.createdAt": "Date of creation",
-  "excelExport.headers.incidents.isScheduled": "Type: scheduled",
-  "excelExport.headers.incidents.isEmergency": "Type: emergency",
   "excelExport.tickets.ticketCommentFilesCount": "files",
   "excelExport.tickets.ticketFromResident": "resident",
   "excelExport.tickets.ticketFromNonResident": "not resident",
@@ -1738,9 +1737,5 @@
   "incident.changeHistory.workStart": "work start",
   "incident.changeHistory.workFinish": "work finish",
   "incident.changeHistory.workType": "work type",
-  "incident.changeHistory.workType.emergency": "\"«emergency\"",
-  "incident.changeHistory.workType.notEmergency": "\"«not emergency\"",
-  "incident.changeHistory.workType.scheduled": "\"scheduled\"",
-  "incident.changeHistory.workType.notScheduled": "\"not scheduled\"",
   "incident.hints.more.label": "Подробнее"
 }
