--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -90,6 +90,7 @@
   "FiltersLabel": "Фильтры",
   "field.required": "Это обязательное поле — заполните его",
   "field.AccountNumberShort": "ЛС",
+  "field.TotalCharged": "ИТОГО начислено",
   "field.TotalPayment": "ИТОГО к оплате",
   "field.Address": "Адрес",
   "field.Address.notFound": "Адрес не найден. Возможно, этот дом ещё не добавлен в «Домá».",
