--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1577,5 +1577,65 @@
   "billing.category.internet.name": "Internet",
   "billing.category.radio.name": "Radio",
   "billing.category.intercom.name": "Intercom",
-  "billing.category.telecom.name": "Telecom"
+  "billing.category.telecom.name": "Telecom",
+  "banking.integration.SBBOL.name": "SBBOL",
+  "banking.integration.1CClientBankExchange.name": "1C",
+  "banking.category.maintenance_and_current_repair_of_common_property_in_an_apartment_building.name": "Maintenance and current repair of common property in an apartment building",
+  "banking.category.apartment_building_management.name": "Apartment building management",
+  "banking.category.overhaul.name": "Overhaul",
+  "banking.category.drainage.name": "Drainage",
+  "banking.category.water_supply.name": "Water supply",
+  "banking.category.garbage_collection_and_disposal.name": "Garbage collection and disposal",
+  "banking.category.gas.name": "Gas",
+  "banking.category.hot_water_supply.name": "Hot water supply",
+  "banking.category.additional_services.name": "Additional services",
+  "banking.category.thermal_energy.name": "Thermal energy",
+  "banking.category.cold_water_supply.name": "Cold water supply",
+  "banking.category.electric_energy.name": "Electric energy",
+  "banking.costItem.emergency_service.name": "Emergency service",
+  "banking.costItem.rent.name": "Rent",
+  "banking.costItem.banking_services.name": "Banking services",
+  "banking.costItem.maintenance_and_operation.name": "Maintenance and operation",
+  "banking.costItem.overhaul.name": "Overhaul",
+  "banking.costItem.water_supply.name": "Water supply",
+  "banking.costItem.compensation_for_damage.name": "Compensation for damage",
+  "banking.costItem.garbage_collection_and_disposal.name": "Garbage collection and disposal",
+  "banking.costItem.gas.name": "Gas",
+  "banking.costItem.deratization_and_disinfestation.name": "Deratization and disinfestation",
+  "banking.costItem.materials_for_repair_and_maintenance.name": "Materials for repair and maintenance",
+  "banking.costItem.purchase_of_machinery_and_equipment.name": "Purchase of machinery and equipment",
+  "banking.costItem.employee_wages.name": "Employee wages",
+  "banking.costItem.rental_fee.name": "Rental fee",
+  "banking.costItem.concierges.name": "Concierges",
+  "banking.costItem.materials_for_maintenance_and_current_repair.name": "Materials for maintenance and current repair",
+  "banking.costItem.taxes.name": "Taxes",
+  "banking.costItem.equipment.name": "Equipment",
+  "banking.costItem.maintenance_of_access_control_systems.name": "Maintenance of access control systems",
+  "banking.costItem.intercom_service.name": "Intercom service",
+  "banking.costItem.maintenance_and_inspection_of_metering_devices.name": "Maintenance and inspection of metering devices",
+  "banking.costItem.maintenance_of_elevator_equipment.name": "Maintenance of elevator equipment",
+  "banking.costItem.maintenance_of_fireplaces_and_hearths.name": "Maintenance of fireplaces and hearths",
+  "banking.costItem.maintenance_of_ventilation_systems.name": "Maintenance of ventilation systems",
+  "banking.costItem.maintenance_of_video_surveillance_systems.name": "Maintenance of video surveillance systems",
+  "banking.costItem.domestic_gas_equipment.name": "Domestic gas equipment",
+  "banking.costItem.maintenance_of_water_supply_systems_cold_and_hot_heating_and_sanitation.name": "Maintenance of water supply systems (cold and hot), heating and sanitation",
+  "banking.costItem.security.name": "Security",
+  "banking.costItem.services_for_interaction_with_owners_and_citizens.name": "Services for interaction with owners and citizens",
+  "banking.costItem.other_maintenance.name": "Other maintenance",
+  "banking.costItem.other_management_services.name": "Other management services",
+  "banking.costItem.radio_point.name": "Radio point",
+  "banking.costItem.current_repair_of_structural_elements_of_an_apartment_building.name": "Current repair of structural elements of an apartment building",
+  "banking.costItem.tv.name": "TV",
+  "banking.costItem.thermal_energy.name": "Thermal energy",
+  "banking.costItem.transport.name": "Transport",
+  "banking.costItem.cleaning.name": "Cleaning",
+  "banking.costItem.house_area_cleaning.name": "House area cleaning",
+  "banking.costItem.residential_and_utility_billing_services.name": "Residential and utility billing services",
+  "banking.costItem.finance_and_accounting.name": "Finance and accounting",
+  "banking.costItem.targeted_fees.name": "Targeted fees",
+  "banking.costItem.fines_of_state_regulatory_bodies.name": "Fines of state regulatory bodies",
+  "banking.costItem.electric_energy.name": "Electric energy",
+  "banking.costItem.legal_services.name": "Legal services",
+  "banking.costItem.debt_collection.name": "Debt collection",
+  "banking.costItem.drainage.name": "Drainage"
 }
