--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1577,5 +1577,65 @@
   "billing.category.internet.name": "Интернет",
   "billing.category.radio.name": "Радио",
   "billing.category.intercom.name": "Домофон",
-  "billing.category.telecom.name": "Антена"
+  "billing.category.telecom.name": "Антена",
+  "banking.integration.SBBOL.name": "СББОЛ",
+  "banking.integration.1CClientBankExchange.name": "1С",
+  "banking.category.maintenance_and_current_repair_of_common_property_in_an_apartment_building.name": "Содержание и текущий ремонт общего имущества в многоквартирном доме",
+  "banking.category.apartment_building_management.name": "Управление многоквартирным домом",
+  "banking.category.overhaul.name": "Капитальный ремонт",
+  "banking.category.drainage.name": "Водоотведение",
+  "banking.category.water_supply.name": "Водоснабжение",
+  "banking.category.garbage_collection_and_disposal.name": "Вывоз и утилизация мусора",
+  "banking.category.gas.name": "Газ",
+  "banking.category.hot_water_supply.name": "Горячее водоснабжение",
+  "banking.category.additional_services.name": "Дополнительные услуги",
+  "banking.category.thermal_energy.name": "Тепловая энергия",
+  "banking.category.cold_water_supply.name": "Холодное водоснабжение",
+  "banking.category.electric_energy.name": "Электрическая энергия",
+  "banking.costItem.emergency_service.name": "Аварийное обслуживание",
+  "banking.costItem.rent.name": "Аренда",
+  "banking.costItem.banking_services.name": "Банковское обслуживание",
+  "banking.costItem.maintenance_and_operation.name": "Техническое обслуживание и эксплуатация",
+  "banking.costItem.overhaul.name": "Капитальный ремонт",
+  "banking.costItem.water_supply.name": "Водоснабжение",
+  "banking.costItem.compensation_for_damage.name": "Возмещение ущерба",
+  "banking.costItem.garbage_collection_and_disposal.name": "Вывоз и утилизация мусора",
+  "banking.costItem.gas.name": "Газ",
+  "banking.costItem.deratization_and_disinfestation.name": "Дератизация и дезинсекция",
+  "banking.costItem.materials_for_repair_and_maintenance.name": "Материалы для ремонта и обслуживания",
+  "banking.costItem.purchase_of_machinery_and_equipment.name": "Закупка техники и оборудования",
+  "banking.costItem.employee_wages.name": "Заработная плата сотрудников",
+  "banking.costItem.rental_fee.name": "Квартплата",
+  "banking.costItem.concierges.name": "Консьержи",
+  "banking.costItem.materials_for_maintenance_and_current_repair.name": "Материалы для содержания и текущего ремонта",
+  "banking.costItem.taxes.name": "Налоги",
+  "banking.costItem.equipment.name": "Оборудование",
+  "banking.costItem.maintenance_of_access_control_systems.name": "Обслуживание систем контроля управления доступом",
+  "banking.costItem.intercom_service.name": "Обслуживание домофонов",
+  "banking.costItem.maintenance_and_inspection_of_metering_devices.name": "Обслуживание и проверка приборов учета",
+  "banking.costItem.maintenance_of_elevator_equipment.name": "Обслуживание лифтового оборудования",
+  "banking.costItem.maintenance_of_fireplaces_and_hearths.name": "Обслуживание печей каминов и очагов",
+  "banking.costItem.maintenance_of_ventilation_systems.name": "Обслуживание систем вентиляции",
+  "banking.costItem.maintenance_of_video_surveillance_systems.name": "Обслуживание систем видеонаблюдения",
+  "banking.costItem.domestic_gas_equipment.name": "ВДГО",
+  "banking.costItem.maintenance_of_water_supply_systems_cold_and_hot_heating_and_sanitation.name": "Обслуживание систем водоснабжения (холодного и горячего), ототпления и водоотведения",
+  "banking.costItem.security.name": "Охрана",
+  "banking.costItem.services_for_interaction_with_owners_and_citizens.name": "Услуги по взаимодействию с собственниками и гражданами",
+  "banking.costItem.other_maintenance.name": "Прочее техническое обслуживание",
+  "banking.costItem.other_management_services.name": "Прочие управленческие услуги",
+  "banking.costItem.radio_point.name": "Радиоточка",
+  "banking.costItem.current_repair_of_structural_elements_of_an_apartment_building.name": "Текущий ремонт конструктивных элементов многоквартирного дома",
+  "banking.costItem.tv.name": "Телевидение",
+  "banking.costItem.thermal_energy.name": "Тепловая энергия",
+  "banking.costItem.transport.name": "Транспорт",
+  "banking.costItem.cleaning.name": "Уборка",
+  "banking.costItem.house_area_cleaning.name": "Уборка придомовой территории",
+  "banking.costItem.residential_and_utility_billing_services.name": "Услуги по начислению платы за жилое помещение и коммунальные услуги",
+  "banking.costItem.finance_and_accounting.name": "Финансы и бухгалтерский учет",
+  "banking.costItem.targeted_fees.name": "Целевые сборы",
+  "banking.costItem.fines_of_state_regulatory_bodies.name": "Штрафы государственных контролирующих органов",
+  "banking.costItem.electric_energy.name": "Электрическая энергия",
+  "banking.costItem.legal_services.name": "Юридический услуги",
+  "banking.costItem.debt_collection.name": "Взыскание задолженности",
+  "banking.costItem.drainage.name": "Водоотведение"
 }
